[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric"
version = "0.0.1"
description = "Test whether spatial geometry emerges from a purely relational representation of a physical system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
sim = [
    "jax[cuda12]",
    "brax",
]
train = [
    "torch",
    "huggingface_hub",
    "tensorboard",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fabric*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
